# Datamining

./: README.txt
dm1_Distance Functions & Vectors/: compute_distances.py  distance_fn.py
dm1_Logistic Regression & Decision trees/: ex1.py  ex2.py
dm1_Similarity & Timeseries & Graphs/: compute_dtw.py  compute_sp_kernel.py  shortest_path_kernel.py
dm1_kNN & Naive Bayes/: evaluation.py  knn.py  knn_classifier.py  nbayes_summarize_data.py  nbayes_uber.py  output_knn.txt  output_summary_class_2.txt  output_summary_class_4.txt
dm2_SVD Imputation & Kernel PCA/: pyproject.toml
dm2_SVD Imputation & Kernel PCA/scripts/: impute.py  pca.py  run_hw3.py
dm2_SelforganizingMaps/: output_some_crabs.txt
dm2_SelforganizingMaps/scripts/: compute_som.py  somutils.py
dm2_hw1/: run_pca.py
dm2_hw3/: requirements.txt
dm2_hw3/scripts/: impute.py  pca.py  run_hw3.py
dm2_hwk2/: pca.py  pinv.py  run_hw2.py
dm2_transductiveSVM/: run_hw6.py  svm_linear.py  tsvm_linear.py
hw1/: pca.py  utils.py
hw3/: impute.py  pca.py  run_hw3.py
