[tool.poetry]
name = "homework3"
version = "0.1.0"
description = ""
authors = [] 

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
scipy = "^1.6.2"
matplotlib = "^3.4.0"
numpy = "^1.20.2"
scikit-learn = "^0.24.1"
ipython = "^7.22.0"
seaborn-image = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
